Implement login feature, data reading, and item insertion functionality
- Added user login functionality with validation through username and password.
- Implemented data retrieval from the database and display using RecyclerView.
- Added functionality to insert new items into the shopping list with basic item details.
- Ensured database is properly initialized and data is reflected in the UI.

Next steps: Continue adding more CRUD functionality (update and delete), and improve UI/UX.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".InsertBarangActivity"></activity> <!-- Tambahkan ini -->
         <activity android:name=".MainActivity" /> <!-- Ini adalah MainActivity kamu -->
         <activity android:name=".RegisterActivity" />
     </application>
