--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
 
         <activity android:name=".InsertBarangActivity"></activity> <!-- Tambahkan ini -->
+        <activity android:name=".UpdateItemActivity"></activity>
         <activity android:name=".MainActivity" /> <!-- Ini adalah MainActivity kamu -->
         <activity android:name=".RegisterActivity" />
     </application>
